--- a/notification.component.css
+++ b/notification.component.css
@@ -1,6 +1,11 @@
-.col-xs-7{
+.container {
+  width: 500px;
+  border: 1px solid red;
+}
 
-    float: right;
-    text-align: right;
-    
+.grid {
+  display: grid;
+  grid-gap: 5px;
+  grid-auto-flow: column;
+  width: 100px;
 }
