--- a/notification.component.html
+++ b/notification.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="col-xs-5">
-    <div class="row">
+    <div class="grid">
 <div class="col-2">Notification1</div>
 <div class="col-2">Notification2</div>
 <div class="col-2">Notification3</div>
@@ -9,7 +9,7 @@
     </div>
 </div>
 <div class="col-xs-7">
-    <div class="row">
+    <div class="grid">
 
         <div class="col-xs-12">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. WikipediaIn publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. WikipediaIn publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. WikipediaIn publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. Wikipedia</div>
     </div>
