--- a/header.component.css
+++ b/header.component.css
@@ -1,1 +1,271 @@
 
+ul{list-style: none;}
+
+
+.top-header{
+    background-color: #C02F38;
+    padding: 5px 0px;
+}
+.top-header .header-left-info h6{
+    color: #fff;margin-bottom: 0px;
+    font-size: 14px;
+}
+.top-header .header-left-info p{
+    color: #fff;margin-bottom: 0px;
+    font-size: 14px;
+}
+.top-header .display-set{
+    display: flex;
+}
+.top-header .color-wt{
+    color: #fff;
+    margin-bottom: 0px;
+    font-size: 14px;
+}
+.top-header .header-center-info{
+    display: flex;
+    justify-content: center;
+}
+.top-logo-img img{
+    width: 130px;
+    margin-top: 5px;
+    margin-right: 10px;
+}
+.map-icon{
+    align-items: center;
+    display: flex;
+    font-size: 20px;
+    padding: 0px 15px 0px 0px;
+}
+.left-boder-styles{
+margin-left: 35px;
+display: flex;
+   align-items: center; 
+}
+.left-boder-styles::after{
+    content: "";
+    background:#fff;
+    position: absolute;
+    right: 55%;
+    top: 25%;
+    height: 20px;
+    width: 1px;
+   
+}
+.logo-boder-styles{margin-left: 20px;}
+.logo-boder-styles::after{
+    content: "";
+    background:#fff;
+    position: absolute;
+    right: 49%;
+    top: 25%;
+    height: 20px;
+    width: 1px;
+   
+}
+.top-header .top-right-info ul{
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;   
+     margin-bottom: 0;
+}
+
+.top-header .hd-vertical-center{
+   align-items: center; 
+}
+.contact-icon li a{
+    color: #fff;
+}
+.contact-icon li a i{
+    font-size: 30px;
+}
+.contact-icon li{
+    padding: 0px 15px;
+}
+ul li{
+    display:inline-block;
+  }
+  .navigation li:before{
+    display:inline-block;
+    width:15px;
+    height:15px;
+    content:" ";
+    border:2px solid rgb(182, 134, 134);
+    border-radius:4px;
+    margin-right: 5px;
+  }
+  li:last-child{
+  color:red;
+  } 
+  li:first-child:before{
+    display:none;
+  }
+  a{
+      display: inline;
+  } 
+  div#Container
+  {
+    position: relative;
+  }
+  .nav
+  {
+    width: 100%;  
+    position: absolute;
+    background-color: white;  /*Code to add a white background to list*/
+    padding: 15px;  
+  }
+  div#middle
+  {
+    position: absolute;
+  }
+  .nav a
+  {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #000000;
+  }
+  .nav ul
+  {
+    display:block;
+  }
+  .nav ul a
+  {
+    display: block;
+    float:left;
+    width: 150px;
+    padding: 10px 20px;
+    border: 1px solid #ffffff;
+    text-align: center;
+    font-size: 1.3em;
+  }
+  .nav ul a:hover
+  {
+    background: red;
+  }
+  .nav ul li
+  {
+    display: inline-block;
+    vertical-align: top;
+  }
+  .nav ul ul li {  display: block;  }
+  .nav ul li:hover > ul
+  {
+    display:block;
+  }
+  .nav ul li ul
+  {
+    margin:0;
+    padding: 0;
+    display: none;
+    background-color: #000000;
+    top: 45px;
+  }
+  .navbar-nav .active {
+    padding-left: 20px !important   ;
+  }
+  .navlist .nav-link {
+    color: rgba(0,0,0,.55);
+  }
+
+
+@media only screen and (max-width: 767px) {
+    .map-icon {
+      font-size: 20px;
+        padding: 0px 5px 0px 0px;
+    }
+    .left-boder-styles {
+        margin-left: 11px;
+      
+    }
+
+    .left-boder-styles::after {
+        content: "";
+        background: #fff;
+        position: absolute;
+        right: 54%;
+        top: 25%;
+        height: 20px;
+        width: 1px;
+    }
+    .top-header .header-center-info{
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .logo-boder-styles{
+        margin-left: 20px;
+    }
+    .logo-boder-styles::after {
+        content: "";
+        background: #fff;
+        position: absolute;
+        right: 54%;
+        top: 25%;
+        height: 20px;
+        width: 1px;
+    }
+    .contact-icon li a i {
+        font-size: 14px;
+    }
+ 
+    
+.top-header .header-left-info p{
+  font-size: 12px;
+}
+  }
+
+
+  @media only screen and (max-width: 640px) {
+    .top-header .hd-vertical-center {
+        flex-direction: column-reverse;
+    }
+    
+    .map-icon {
+        font-size: 20px;
+          padding: 0px 5px 0px 0px;
+      }
+      .left-boder-styles {
+          margin-left: 11px;
+        
+      }
+  
+      .left-boder-styles::after {
+          content: "";
+          background: #fff;
+          position: absolute;
+          right: 54%;
+          top: 25%;
+          height: 20px;
+          width: 1px;
+      }
+      .top-header .header-center-info{
+          display: flex;
+          justify-content: flex-start;
+      }
+  
+      .logo-boder-styles{
+          margin-left: 20px;
+      }
+      .logo-boder-styles::after {
+          content: "";
+          background: #fff;
+          position: absolute;
+          right: 54%;
+          top: 25%;
+          height: 20px;
+          width: 1px;
+      }
+      .contact-icon li a i {
+          font-size: 14px;
+      }
+   
+      
+  .top-header .header-left-info p{
+    font-size: 12px;
+  }
+  }
+
+  @media only screen and (max-width: 575px) {
+  
+
+  }
