--- a/header.component.html
+++ b/header.component.html
@@ -45,7 +45,7 @@
    </div>
     <nav >
 <div >
-         <ul class="navigation mt-3 clearfix">
+         <ul class="navigation  clearfix">
               <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Guest Count</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Select Days</a></li>
