--- a/header.component.css
+++ b/header.component.css
@@ -31,6 +31,7 @@ ul {
 .top-header .display-set {
 	display: flex;
 	justify-content: space-evenly;
+    position: relative;
 }
 
 .top-header .color-wt {
@@ -50,7 +51,7 @@ ul {
 .top-header .header-center-info {
 	display: flex;
 	justify-content: space-evenly;
-	align-items: center;
+	align-items: center;position: relative;
 }
 
 .top-logo-img img {
@@ -149,8 +150,16 @@ ul {
 /*--Top Header end---*/
 
 /*--Main Header start---*/
+
+.nav-manu-header{
+    background-color: #F8F9FA;
+    padding: 8px 0px; 
+}
 ul li{
     display:inline-block;
+  }
+  .navigation{
+    margin-bottom: 0;
   }
   .navigation li:before{
     display:inline-block;
@@ -241,10 +250,12 @@ ul li{
 
 @media only screen and (max-width: 1299px) and (min-width: 1200px) {
 	.left-boder-styles::after {
-		left: 51%;
+        left: 51%;
+        top: 20%;
 	}
 	.logo-boder-styles::after {
 		left: 40%;
+        top: 20%;
 	}
 }
 
@@ -379,7 +390,7 @@ ul li{
     top: 22%;
     height: 20px;
     width: 1px;
-    left: 32%;
+    left: 26%;
 	}
 	.contact-icon li a i {
 		font-size: 14px;
@@ -398,8 +409,16 @@ ul li{
 }
 }
 
-
-
+@media only screen and (max-width: 720px) {
+.logo-boder-styles::after {
+      left: 29%;
+    }
+}
+@media only screen and (max-width: 669px) {
+    .logo-boder-styles::after {
+          left: 30%;
+        }
+    }
 @media only screen and (max-width: 640px) {
 
  .left-boder-styles::after {
@@ -455,7 +474,7 @@ ul li{
 	}
   .top-logo-img img {
     left: 0px;
-    height: 35px;
+    height: 33px;
     width: 120px;
     position: absolute;
     top: -29px;
