--- a/header.component.html
+++ b/header.component.html
@@ -1,73 +1,72 @@
 <!--Header Top start-->
 
 <header class="">
-   <div class="top-header">
-      <div class="container-fluid">
-         <nav>
-            <div class="row hd-vertical-center">
-               <div class="col-xl-4 col-lg-5 col-md-5 col-sm-5">
-                  <div class="header-left-info display-set">
-                     <div>
-                        <h6>Olive Garden #1005</h6>
-                        <p>East Kissimmee,FL34726</p>
-                     </div>
-                     <div class="map-icon"> <i class="fa fa-map-marker" aria-hidden="true" style="color: #fff;"></i></div>
-                     <div class="left-boder-styles">
-                        <h6>ParPull Production System</h6>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-xl-4 col-lg-4 col-md-4 col-sm-5">
-                  <div class="header-center-info">
-                     <div class="top-logo-img">
-                        <a class="" href="#">
-                           <img src="./assets/image/logo.png" class="img-fluid">
-                        </a>
-                     </div>
-                     <div class="logo-boder-styles top-dates">
-                        <p class="color-wt">Parring for:</p>
-                        <h6 class="color-wt-subtext">Tuesday, June 15s</h6>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-xl-4 col-lg-3 col-md-3 col-sm-2">
-                  <div class="top-right-info">
-                     <ul class="contact-icon">
-                        <li><a href=""><i class="fa fa-wrench"></i></a></li>
-                        <li><a href=""><i class="fa fa-bell"></i></a></li>
-                        <li><a href=""><i class="fa fa-user"></i></a></li>
-                        <li class="user-login">
-                           <a href="">
-                              <div class="user-info">
-                                 <p class="user-message">Hello,</p>
-                                 <p class="user-name">Aaron B</p>
-                              </div>
-                           </a>
-                        </li>
-                     </ul>
-                  </div>
-               </div>
-            </div>
-         </nav>
-      </div>
-   </div>
-   <nav style="background:#F8F9FA;">
-      <div>
-         <ul class="navigation  clearfix">
-              <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="https://phtn-my.sharepoint.com/personal/anithagracelinmary_g_photon_in/_layouts/15/onedrive.aspx?ct=1629138844964&or=Teams%2DHL&originalPath=aHR0cHM6Ly9waHRuLW15LnNoYXJlcG9pbnQuY29tLzpmOi9nL3BlcnNvbmFsL2FuaXRoYWdyYWNlbGlubWFyeV9nX3Bob3Rvbl9pbi9FbW9kTFlkSVQ2WklwdVlrM0JHQ2lvd0ItQWc2RmNBZDR0TGQxOGZVcFJSM1NnP3J0aW1lPVdhQWtXWHRnMlVn&id=%2Fpersonal%2Fanithagracelinmary%5Fg%5Fphoton%5Fin%2FDocuments%2FDarden%20Parpull%20Refresh%2F001%20%2D%20Photon%20Documents%2FUX%20%26%20UI%2F001%20%2D%20Design%20Files%2FParPull%2FSprint%201%20Assets%2FNavigation%20Assets%2FUI%20Navigation%2FGuest%20Counts%2FSelected%5FGreen%2Epng&parent=%2Fpersonal%2Fanithagracelinmary%5Fg%5Fphoton%5Fin%2FDocuments%2FDarden%20Parpull%20Refresh%2F001%20%2D%20Photon%20Documents%2FUX%20%26%20UI%2F001%20%2D%20Design%20Files%2FParPull%2FSprint%201%20Assets%2FNavigation%20Assets%2FUI%20Navigation%2FGuest%20Counts">Guest Count</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Select Days</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">MenuMix</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">To Go Items</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">On-Hand</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Projections</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Reports</a></li>
-          </ul> 
-          
-      </div>
-      </nav>
-</header>
-
+    <div class="top-header">
+       <div class="container-fluid">
+          <nav>
+             <div class="row hd-vertical-center">
+                <div class="col-xl-4 col-lg-5 col-md-5 col-sm-5">
+                   <div class="header-left-info display-set">
+                      <div>
+                         <h6>Olive Garden #1005</h6>
+                         <p>East Kissimmee,FL34726</p>
+                      </div>
+                      <div class="map-icon"> <i class="fa fa-map-marker" aria-hidden="true" style="color: #fff;"></i></div>
+                      <div class="left-boder-styles">
+                         <h6>ParPull Production System</h6>
+                      </div>
+                   </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-5">
+                   <div class="header-center-info">
+                      <div class="top-logo-img">
+                         <a class="" href="#">
+                            <img src="./assets/image/logo.png" class="img-fluid">
+                         </a>
+                      </div>
+                      <div class="logo-boder-styles top-dates">
+                         <p class="color-wt">Parring for:</p>
+                         <h6 class="color-wt-subtext">Tuesday, June 15s</h6>
+                      </div>
+                   </div>
+                </div>
+                <div class="col-xl-4 col-lg-3 col-md-3 col-sm-2">
+                   <div class="top-right-info">
+                      <ul class="contact-icon">
+                         <li><a href=""><i class="fa fa-wrench"></i></a></li>
+                         <li><a href=""><i class="fa fa-bell"></i></a></li>
+                         <li><a href=""><i class="fa fa-user"></i></a></li>
+                         <li class="user-login">
+                            <a href="">
+                               <div class="user-info">
+                                  <p class="user-message">Hello,</p>
+                                  <p class="user-name">Aaron B</p>
+                               </div>
+                            </a>
+                         </li>
+                      </ul>
+                   </div>
+                </div>
+             </div>
+          </nav>
+       </div>
+    </div>
+    <nav class="nav-manu-header">
+       <div>
+          <ul class="navigation  clearfix">
+               <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+               <li class="nav-item"><a class="nav-link" href="https://phtn-my.sharepoint.com/personal/anithagracelinmary_g_photon_in/_layouts/15/onedrive.aspx?ct=1629138844964&or=Teams%2DHL&originalPath=aHR0cHM6Ly9waHRuLW15LnNoYXJlcG9pbnQuY29tLzpmOi9nL3BlcnNvbmFsL2FuaXRoYWdyYWNlbGlubWFyeV9nX3Bob3Rvbl9pbi9FbW9kTFlkSVQ2WklwdVlrM0JHQ2lvd0ItQWc2RmNBZDR0TGQxOGZVcFJSM1NnP3J0aW1lPVdhQWtXWHRnMlVn&id=%2Fpersonal%2Fanithagracelinmary%5Fg%5Fphoton%5Fin%2FDocuments%2FDarden%20Parpull%20Refresh%2F001%20%2D%20Photon%20Documents%2FUX%20%26%20UI%2F001%20%2D%20Design%20Files%2FParPull%2FSprint%201%20Assets%2FNavigation%20Assets%2FUI%20Navigation%2FGuest%20Counts%2FSelected%5FGreen%2Epng&parent=%2Fpersonal%2Fanithagracelinmary%5Fg%5Fphoton%5Fin%2FDocuments%2FDarden%20Parpull%20Refresh%2F001%20%2D%20Photon%20Documents%2FUX%20%26%20UI%2F001%20%2D%20Design%20Files%2FParPull%2FSprint%201%20Assets%2FNavigation%20Assets%2FUI%20Navigation%2FGuest%20Counts">Guest Count</a></li>
+               <li class="nav-item"><a class="nav-link" href="#">Select Days</a></li>
+               <li class="nav-item"><a class="nav-link" href="#">MenuMix</a></li>
+               <li class="nav-item"><a class="nav-link" href="#">To Go Items</a></li>
+               <li class="nav-item"><a class="nav-link" href="#">On-Hand</a></li>
+               <li class="nav-item"><a class="nav-link" href="#">Projections</a></li>
+               <li class="nav-item"><a class="nav-link" href="#">Reports</a></li>
+           </ul> 
+           
+       </div>
+       </nav>
+ </header>
 
 
 
