--- a/notification.component.html
+++ b/notification.component.html
@@ -1,4 +1,81 @@
-<div class="container-fluid">
+<html>
+<head>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+
+</head>
+<body>
+  
+
+  
+<section class="notification-main">
+  <div class="container-fluid">
+   <div class="row">
+    <div class="col-md-4 mb-3">
+      <div class="notification-titel">
+        <ul class="nav nav-pills flex-column notificasion-titel" id="myTab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"> 
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
+  </li>
+</ul>
+</div>
+    </div>
+    <!-- /.col-md-4 -->
+        <div class="col-md-8">
+      <div class="tab-content  notification-code" id="myTabContent">
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+  <h2>Home</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
+  </div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+  <h2>Profile</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
+  </div>
+  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+  <h2>Contact</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
+  
+  </div>
+</div>
+    </div>
+    <!-- /.col-md-8 -->
+  </div>
+  
+  
+  
+</div>
+    
+    
+    
+    
+<!-- /.container -->
+
+     
+</section>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script type="text/javascript" src="https://jacoblett.github.io/bootstrap4-latest/bootstrap-4-latest.min.js"></script>
+<script type="text/javascript"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+<!---<div class="container-fluid">
     <div class="col-xs-5">
     <div class="grid">
 <div class="col-2">Notification1</div>
@@ -17,4 +94,4 @@
 
 </div>
 
-</div>
+</div>---->
