--- a/header.component.html
+++ b/header.component.html
@@ -66,5 +66,6 @@
       </div>
       </nav>
 </header>
-<!-- <footer class="footer"><img src="./assets/Footer.png" class="image-fluid"></footer> -->
+<!-- <app-notification></app-notification>
+<app-footer></app-footer> -->
 
