--- a/notification.component.html
+++ b/notification.component.html
@@ -11,7 +11,7 @@
 <section class="notification-main">
   <div class="container-fluid">
    <div class="row">
-    <div class="col-md-4 mb-3">
+    <div class="col-md-4">
       <div class="notification-titel">
         <ul class="nav nav-pills flex-column notificasion-titel" id="myTab" role="tablist">
   <li class="nav-item">
